# ClosedLoopBench

./: .gitignore  README.md  closed_loop_report.json
actors/: __init__.py  closure_levels.py  policy_config.py  reactive_actor.py  runtime_plan.py  style_profiles.py  traffic_manager_executor.py
adapters/: actor_binding.py  actor_catalog.py  cosmos_transfer.py  evaluation_protocol.py  ir_to_carla.py  ir_to_opendrive.py  ir_to_openscenario.py  nurec_260_client.py  nurec_grpc_dispatch.py  nurec_inventory.py  nurec_multimodal.py  nurec_pose_probe.py  nurec_runtime_handler.py  nuscenes_map_to_opendrive.py  nuscenes_scene.py  reconstruction_package.py  reconstruction_planning.py  runtime_alignment.py  scene_exchange.py  scene_package.py  shared_message_store.py  shared_protocol_validation.py
agents/: __init__.py  algorithm_backend.py  ego_observation.py  ego_policy.py  ros2_control_driver.py  ros2_observation_control_driver.py  ros2_tcp_bridge.py  sensor_contract.py  tcp_adapter_contract.py  tcp_runtime_adapter.py
configs/: scene0061_nurec_cameras.yaml
docker/: algorithm.env.example  compose.algorithm.yml
docker/algorithm/carla_msgs/: CMakeLists.txt  package.xml
docs/: actor_runtime_plan.md  adapter_mvp.md  algorithm_container.md  architecture.md  carla_integration_runbook.md  carla_runtime_design.md  carla_vehicle_pedestrian_actors.md  closed_loop_metrics.md  closed_loop_runtime_design.md  convergence_plan.md  core_closed_loop_integration.md  cosmos_offline_derivation.md  data_contract.md  delivery_boundary_gate.md  ego_observation_runtime_audit.md  (+21 more)
(+172 files in other folders)
