<?xml version="1.0"?>
<package format="3">
  <name>carla_msgs</name>
  <version>0.0.1</version>
  <description>Minimal CARLA ego-control message required by algorithm plugins.</description>
  <maintainer email="maintainer@example.com">ClosedLoopBench</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
